iptables/ip6tables-standard__vps~kvm~timeweb-ru
#-----------------------------------------------------------------------------------------------------------------------
#   Провайдер:      timeweb.ru
#   Конфигурация:   Junior
#-----------------------------------------------------------------------------------------------------------------------

*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT

*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:block_fw - [0:0]
:block_in - [0:0]
:block_out - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -p ipv6-icmp -m icmp6 --icmpv6-type 129 -j ACCEPT
-A INPUT -i eth0 -p ipv6-icmp -m icmp6 --icmpv6-type 1 -j ACCEPT
-A INPUT -i eth0 -p ipv6-icmp -m icmp6 --icmpv6-type 3 -j ACCEPT
-A INPUT -i eth0 -p ipv6-icmp -m icmp6 --icmpv6-type 128 -j ACCEPT
-A INPUT -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -m state --state INVALID -j DROP
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A INPUT -i eth0 -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
#
# Открываем порт для SSH
#-A INPUT -i eth0 -p tcp -m tcp --dport 1150 -j ACCEPT
#
# Открываем порты для сервисов
#-A INPUT -s 2a02:7b40:c3b5:f35e::1/128 -i eth0 -p tcp -m tcp --dport 80 -j ACCEPT
#-A INPUT -s 2a02:7b40:c3b5:f35e::1/128 -i eth0 -p tcp -m tcp --dport 443 -j ACCEPT
#
-A INPUT -j block_in
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m state --state INVALID -j DROP
-A FORWARD -j block_fw
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o eth0 -j ACCEPT
-A OUTPUT -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A OUTPUT -j block_out
-A block_fw -j LOG --log-prefix --FW--BLOCK --log-level 6
-A block_fw -j DROP
-A block_in -j LOG --log-prefix --IN--BLOCK --log-level 6
-A block_in -j DROP
-A block_out -j LOG --log-prefix --OUT--BLOCK --log-level 6
-A block_out -j DROP
COMMIT
