iptables/iptables-standart__vps~kvm~timeweb-ru
#-----------------------------------------------------------------------------------------------------------------------
#   Провайдер:      timeweb.ru
#   Конфигурация:   Junior
#-----------------------------------------------------------------------------------------------------------------------

*mangle
:PREROUTING ACCEPT [27790:9058918]
:INPUT ACCEPT [27761:9053453]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [156:16679]
:POSTROUTING ACCEPT [156:16679]
COMMIT
*nat
:PREROUTING ACCEPT [51:7002]
:INPUT ACCEPT [20:1419]
:OUTPUT ACCEPT [12:912]
:POSTROUTING ACCEPT [12:912]
COMMIT
*filter
:INPUT DROP [1882:617046]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -i eth0 -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -i eth0 -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A INPUT -i eth0 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -m state --state INVALID -j DROP
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A INPUT -i eth0 -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
#
# Открываем порт для SSH
-A INPUT -i eth0 -p tcp -m tcp --dport 1150 -j ACCEPT
#
#
# Открываем порты для сервисов
#
# Открываем для VPN max@apivox.com
-A INPUT -s 104.156.225.185 -i eth0 -p tcp -m tcp --dport 80 -j ACCEPT
# Открываем для всех
#-A INPUT -i eth0 -p tcp -m tcp --dport 80 -j ACCEPT
#
# Открываем для VPN max@apivox.com
-A INPUT -s 104.156.225.185 -i eth0 -p tcp -m tcp --dport 443 -j ACCEPT
# Открываем для всех
#-A INPUT -i eth0 -p tcp -m tcp --dport 443 -j ACCEPT
#
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m state --state INVALID -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o eth0 -j ACCEPT
-A OUTPUT -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
COMMIT
